# MGR

./: .gitignore  CMakeLists.txt  PRACA_MGR.code-workspace  README.md  gui.py  main.cpp  vcpkg-configuration.json  vcpkg.json
CUDA/: CMakeLists.txt  CUDA_FITNESS.cpp
CUDA/include/: fitness.h
CUDA/src/: fitness.cu
CUDA_FITNESS/: CMakeLists.txt
CUDA_FITNESS/include/: fitness.h
CUDA_FITNESS/src/: fitness.cu
HEADERONLY/: CMakeLists.txt
UTILS/: CMakeLists.txt
UTILS/include/external_utils/: BS_thread_pool_light.hpp  argparse.hpp
UTILS/include/my_utils/: Logger.cpp  Logger.hpp  Profiler.cpp  Profiler.hpp
UTILS/src/: Logger.cpp  Profiler.cpp
include/: ArtGeneration.cpp  ArtGeneration.hpp  Config.cpp  Config.hpp  fitness.cpp  fitness.h  fitness.hpp  fitnessCu.cu
include/common/: Config.cpp  Config.hpp  DataStructures.cpp  DataStructures.hpp  Randoms.cpp  Randoms.hpp
include/drawing/: drawingInterface.hpp
include/drawing/cairo/: cairoDrawer.cpp  cairoDrawer.hpp
include/drawing/openGL/: OGLhandler.cpp  OGLhandler.hpp  handler.cpp  handler.hpp  openGLDrawer.cpp  openGLDrawer.hpp
include/drawing/openGL/context/: Context.cpp  Context.hpp
include/drawing/openGL/objects/: Mesh.cpp  Mesh.hpp  VBO.cpp  VBO.hpp  Window.cpp  Window.hpp  mesh.cpp  mesh.hpp  window.cpp  window.hpp
include/drawing/openGL/shaders/: AbstractShader.cpp  AbstractShader.hpp  IShader.cpp  IShader.hpp  Triangle.cpp  Triangle.hpp  Triangle2.cpp  Triangle2.hpp  fullscreenFBO.cpp  fullscreenFBO.hpp  shaders.cpp  shaders.hpp
include/external_utils/: argparse.hpp  stb_image_write.h
include/genetic/: Gene.cpp  Gene.hpp  Genotype.cpp  Genotype.hpp  Population.cpp  Population.hpp
include/genetic/gene/: AbstractGene.hpp
include/genetic/mutators/: AbstractBasicMutator.cpp  AbstractBasicMutator.hpp  AbstractMutator.hpp  NormalMutator.cpp  NormalMutator.hpp  UniformMutator.cpp  UniformMutator.hpp
include/genetic/selectors/: AbstractSelector.hpp  ElitistSelector.hpp
include/my_utils/: Logger.cpp  Logger.hpp  Profiler.cpp  Profiler.hpp
shaders/: triangle.vert
shaders/fullscreenFBO/: fullscreenFBO.frag  fullscreenFBO.vert
shaders/triangle/: shader.vert
shaders/triangle_v2/: shader.vert
tests/: CMakeLists.txt  doctest.h
tests/testfiles/: MutatorTest.cpp  first_test.cpp  gtest2.cpp  gtestCopy.cpp  probability.cpp  test copy.cpp  test.cpp
