cmake_minimum_required(VERSION 3.0.0)
project(CUDA_FITNESS VERSION 0.1.0)

enable_language(CUDA)
find_package(CUDA REQUIRED)

# set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -gencode arch=compute_61,code=sm_61")

if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
  set(CMAKE_CUDA_ARCHITECTURES 61)
endif(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)

include(CTest)
enable_testing()

add_library(${PROJECT_NAME} SHARED src/fitness.cu)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

set(CUDA_FITNESS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include )
set(CUDA_FITNESS_INCLUDE ${CUDA_FITNESS_INCLUDE} PARENT_SCOPE)
include_directories(${CUDA_FITNESS_INCLUDE})

target_link_libraries(${PROJECT_NAME} PRIVATE MY_UTILS)