cmake_minimum_required(VERSION 3.27.0)

if(NOT DEFINED ${CMAKE_CUDA_ARCHITECTURES})
  set(CMAKE_CUDA_ARCHITECTURES 61)
endif(NOT DEFINED ${CMAKE_CUDA_ARCHITECTURES})


project(CUDA_FITNESS LANGUAGES CUDA VERSION 0.2.0)

# find_package(CUDA REQUIRED)

# set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -gencode arch=compute_61,code=sm_61")


set(CMAKE_CXX_STANDARD 17)
include(CTest)
enable_testing()

add_library(${PROJECT_NAME} SHARED src/fitness.cu)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

set(CUDA_FITNESS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include )
set(CUDA_FITNESS_INCLUDE ${CUDA_FITNESS_INCLUDE} PARENT_SCOPE)
include_directories(${CUDA_FITNESS_INCLUDE})

set_target_properties( ${PROJECT_NAME}
                       PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_property(TARGET ${PROJECT_NAME} PROPERTY CUDA_ARCHITECTURES all)
target_link_libraries(${PROJECT_NAME} PRIVATE MY_UTILS)